--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,43 +6,45 @@ media_folder: static/assets/images
 public_folder: /assets/images
 
 collections:
-  - name: 'blog'
-    label: 'Blog'
-    folder: 'content/blog'
-    format: 'frontmatter'
+  - name: "blog"
+    label: "Blog"
+    folder: "content/blog"
+    format: "frontmatter"
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     editor:
       preview: false
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
-  - name: 'gallery'
-    label: 'Gallery'
-    folder: 'content/gallery'
-    format: 'frontmatter'
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Description", name: "description", widget: "string" }
+      - { label: "Body", name: "body", widget: "markdown" }
+  - name: "gallery"
+    label: "Gallery"
+    folder: "content/gallery"
+    format: "frontmatter"
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     editor:
       preview: false
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Description', name: 'description', widget: 'text' }
-      - { label: 'Image', name: 'image', widget: 'image',  multiple: true}
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Description", name: "description", widget: "text" }
+      - { label: "Image", name: "image", widget: "image", multiple: true }
   - label: "Testimonials"
     name: "testimonials"
     widget: "list"
-    folder: 'content/list'
-    format: 'frontmatter'
+    folder: "content/testimonials"
+    format: "frontmatter"
     create: true
-    summary: '{{fields.quote}} - {{fields.author.name}}'
+    slug: "{{fields.quote}} - {{fields.author.name}}"
     fields:
-      - {label: Quote, name: quote, widget: string}
+      - { label: Quote, name: quote, widget: string }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
       - label: Author
         name: author
         widget: object
         fields:
-          - {label: Name, name: name, widget: string}
-          - {label: Avatar, name: avatar, widget: image}
+          - { label: Name, name: name, widget: string }
+          - { label: Avatar, name: avatar, widget: image }
