--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -32,8 +32,8 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Image", name: "image", widget: "image", multiple: true }
-  - label: "Testimonials"
-    name: "testimonials"
+  - name: "testimonials"
+    label: "Testimonials"
     widget: "list"
     folder: "content/testimonials"
     format: "frontmatter"
